--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   path_provider: ^2.1.5
   intl: ^0.20.1
   crypto: ^3.0.5
+  cryptography: ^2.7.0
   
   # PDF Generation & Printing
   pdf: ^3.11.1
