--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ migrate_working_dir/
 # Generated installers / artifacts
 /installer/output/
 /installer/redist/
+/dist/
 
 # Symbolication related
 app.*.symbols
